SONARPY-3608 Represent multiple attributes on parameters correctly (#750)
GitOrigin-RevId: 575735ac04d5e210d2d9333f7b3ad8afb31608ed